# agentmem

./: .gitignore  README.md  TASK.md  pyproject.toml
.github/workflows/: test.yml
agentmem/: __init__.py  chunker.py  cli.py  config.py  correction.py  graph.py  init.py  outcome.py  search.py
agentmem/templates/: MEMORY.md  index.md
agentmem/templates/pending/: CHANGES.md
agentmem/templates/semantic/: CALIBRATION.md  FACTS.md  GRAPH_INDEX.md  MISTAKES.md  PATTERNS.md  PEOPLE.md  SYSTEMS.md
agentmem/templates/working/: CURRENT.md
examples/: claude_code_integration.md  cursor_rules.md  openclaw_integration.md  standalone_agent.py
tests/: __init__.py  test_chunker.py  test_correction.py  test_graph.py  test_search.py
